dodata swagger dokumentacija za External Recipes
